# detect-cpu

./: .gitignore  CMakeLists.txt  README.md  archs.support
src/: detect-cpu.c
